--- a/index.html
+++ b/index.html
@@ -8,21 +8,17 @@
 
   <body>
     <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
-
-    <h1>Hello World, we are software developers!</h1>
-
-    <!--
-
-    Hello Camper!
-
-    For now, the test suite only works in Chrome!
-    Please read the README below in the JS Editor before beginning.
-    Feel free to delete this message once you have read it.
-    Good luck and Happy Coding!
-
-    - The freeCodeCamp Team
-
-    -->
+    <div id="main">
+      <div id="header">
+        <div id="title">Dr. Norman Borlaug</div>
+        <div id="subtitle">The man who saved a billion lives</div>
+      </div>
+      <div id="intro"">
+        <div id="img-div">
+          <img src="https://source.unsplash.com/random" alt="" id="image"/>
+        </div>
+      </div>
+    </div>
     <script src="js/index.js"></script>
   </body>
 </html>
