--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       </div>
       <div id="intro"">
         <div id="img-div">
-          <img src="https://source.unsplash.com/random" alt="" id="image"/>
+          <img src="https://c2.staticflickr.com/4/3689/10613180113_fdf7bcd316_b.jpg" alt="" id="image"/>
         </div>
       </div>
     </div>
