Finished user stories 5 and 6

--- a/index.html
+++ b/index.html
@@ -13,9 +13,28 @@
         <div id="title">Dr. Norman Borlaug</div>
         <div id="subtitle">The man who saved a billion lives</div>
       </div>
-      <div id="intro"">
+      <div id="intro">
         <div id="img-div">
-          <img src="https://source.unsplash.com/random" alt="" id="image"/>
+          <img src="https://source.unsplash.com/random" alt="" id="image" />
+          <div id="img-caption">
+            Dr. Norman Borlaug, second from left, trains biologists in Mexico on
+            how to increase wheat yields - part of his life-long war on hunger.
+          </div>
+        </div>
+      </div>
+      <div id="main-content">
+        <div id="tribute-info">
+          <h4>
+            Here's a time line of Dr. Borlaug's life:
+          </h4>
+          <ul>
+            <li><bold>1914</bold> - Born in Cresco, Iowa</li>
+            <li>
+              <bold>1933</bold> - Leaves his family's farm to attend the
+              University of Minnesota, thanks to a Depression era program known
+              as the "National Youth Administration"
+            </li>
+          </ul>
         </div>
       </div>
     </div>
