Added user stories 7, 8 and 9

--- a/index.html
+++ b/index.html
@@ -39,6 +39,16 @@
               as the "National Youth Administration"
             </li>
           </ul>
+          <h3>
+            If you have time, you should read more about this incredible human
+            being on his
+            <a
+              id="tribute-link"
+              href="https://en.wikipedia.org/wiki/Norman_Borlaug"
+              target="_blank"
+              >Wikipedia entry</a
+            >.
+          </h3>
         </div>
       </div>
     </div>
